# ChangeLog for app-misc/cds-meta
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cds-meta-11.6-r1 (03 Jun 2011)

  03 Jun 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cds-meta-11.6.ebuild, +cds-meta-11.6-r2.ebuild:
  Add ldap flag

*cds-meta-11.6 (18 May 2011)

  18 May 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cds-meta-11.3.ebuild, +cds-meta-11.6.ebuild:
  Version bump.

*cds-meta-11.3 (09 Mar 2011)

  09 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cds-meta-11.0-r4.ebuild, +cds-meta-11.3.ebuild:
  Version bump.

*cds-meta-11.0-r3 (01 Mar 2011)

  01 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cds-meta-11.0-r2.ebuild, +cds-meta-11.0-r3.ebuild:
  Added calculate_nobittorrent USE flag

*cds-meta-11.0-r2 (21 Feb 2011)

  21 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cds-meta-11.0-r1.ebuild, +cds-meta-11.0-r2.ebuild:
  Add calculate_noapache USE flag

  13 Dec 2010; Aleksey Samoukin <as@calculate.ru>
  cds-meta-11.0.ebuild:
  Replaced calculate-ejabberd to ejabberd

*cds-meta-10.999 (18 Nov 2010)

  18 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cds-meta-10.999.ebuild:
  Version bump

*cds-meta-10.4-r1 (22 Sep 2010)

  22 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cds-meta-10.4.ebuild, +cds-meta-10.4-r1.ebuild:
  Removed nut

  21 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cds-meta-10.4.ebuild:
  Modify dependence for sys-block/parted

  16 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -cds-meta-10.0.ebuild, -cds-meta-10.0.1.ebuild, -cds-meta-10.2-r1.ebuild,
  -cds-meta-10.3.91.ebuild:
  Remove old meta packages.

*cds-meta-10.4 (05 Apr 2010)

  05 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cds-meta-10.4.ebuild:
  Bump version.

*cds-meta-10.3.91 (01 Apr 2010)

  01 Apr 2010; Трацевский Александр
  <atratsevskiy@gentoo.org> +cds-meta-10.3.91.ebuild: