@@ -1,3 +1,3 @@
-EBUILD cds-meta-11.6-r2.ebuild 1649 RMD160 fc34fa9de91506c0d9bf06c26720305821f4d462 SHA1 8bc717b199d0154a7428322c4a13e153aa29f0fd SHA256 4b72c3e625265521c2ecae2a75a64146393ed2767ad17f6fd7d2f71634e17b74
-MISC ChangeLog 2293 RMD160 0953321d114f4125f27fcd5b206988e2faadc3e6 SHA1 862d71cdded18989640e845f699d7a4b3bd7cbe0 SHA256 9cca432ea785cdca9caf3c81ef20be7a3a10b5e3cf4ec9f763176db59c4750ab
+EBUILD cds-meta-11.6-r3.ebuild 1668 RMD160 07a06e42d6456b0b12b6b7ad6a787a9d0e4b23c3 SHA1 d3c5d0bceecd6dc324511bdcbc08425f9e9b0a81 SHA256 deb1b5a2076c50d40198e0f774791b67657256b0c2807e39c759c3c687848a57
+MISC ChangeLog 2550 RMD160 72030fd1c52068d9dcd8866c8d465e1acde04117 SHA1 48091b69921909b56d1a99694b82ec55208a4c9a SHA256 9d2c0a81afef31de5909c7209899b9b574b872e66c8c177a542c33b079471842
 MISC metadata.xml 260 RMD160 6945f0c9b210fe3068c6e5a6f7d5071cf9043369 SHA1 49f5ce48babea34bb39ff3f0d9d7c3adf9665da2 SHA256 74bbb85f1ec54eab72a905a78ffd5ac51bc7c3f64e9731418aa68f773d2bfba8
