@@ -2,6 +2,13 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cds-meta-11.6-r3 (22 Aug 2011)
+
+  22 Aug 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cds-meta-11.6-r2.ebuild, +cds-meta-11.6-r3.ebuild:
+  Add sys-apps/most for PostgreSQL dep. To display the console client output
+  exceeds the screen size.
+
 *cds-meta-11.6-r1 (03 Jun 2011)
 
   03 Jun 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
